--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/avro-1.9.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.9.0-SNAPSHOT.jar" sourcepath="/avro"/>
 	<classpathentry kind="lib" path="lib/avro-mapred-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.2.jar"/>
@@ -10,8 +10,8 @@
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/cores-avro-1.9.0.jar"/>
-	<classpathentry kind="lib" path="lib/cores-core-1.9.0.jar"/>
+	<classpathentry kind="lib" path="lib/cores-avro-1.9.0.jar" sourcepath="/cores-avro"/>
+	<classpathentry kind="lib" path="lib/cores-core-1.9.0.jar" sourcepath="/cores-core"/>
 	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/guava-11.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-auth-2.7.2.jar"/>
@@ -30,5 +30,8 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.10.jar"/>
 	<classpathentry kind="lib" path="lib/trevni-avro-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/trevni-core-1.9.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/avro-tools-1.9.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jopt-simple-4.6.jar"/>
+	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.7.2-tests.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
