--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/avro-1.9.0-SNAPSHOT.jar" sourcepath="/avro"/>
-	<classpathentry kind="lib" path="lib/avro-mapred-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/commons-cli-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-collections-3.2.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-configuration-1.6.jar"/>
@@ -30,8 +28,15 @@
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.10.jar"/>
 	<classpathentry kind="lib" path="lib/trevni-avro-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/trevni-core-1.9.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/avro-tools-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/jopt-simple-4.6.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-hdfs-2.7.2-tests.jar"/>
+	<classpathentry kind="lib" path="/home/ly/parquet-src/parquet-mr/parquet-avro/target/parquet-avro-1.6.0rc3-SNAPSHOT.jar" sourcepath="/parquet-avro"/>
+	<classpathentry kind="lib" path="/home/ly/parquet-src/parquet-mr/parquet-column/target/parquet-column-1.6.0rc3-SNAPSHOT.jar" sourcepath="/parquet-column"/>
+	<classpathentry kind="lib" path="/home/ly/parquet-src/parquet-mr/parquet-common/target/parquet-common-1.6.0rc3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="/home/ly/parquet-src/parquet-mr/parquet-hadoop/target/parquet-hadoop-1.6.0rc3-SNAPSHOT.jar" sourcepath="/parquet-hadoop"/>
+	<classpathentry kind="lib" path="/home/ly/parquet-src/parquet-mr/parquet-hadoop-bundle/target/parquet-hadoop-bundle-1.6.0rc3-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/avro-1.9.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/avro-mapred-1.9.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/avro-tools-1.9.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
