--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,6 @@
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/cores-avro-1.9.0.jar" sourcepath="/cores-avro"/>
-	<classpathentry kind="lib" path="lib/cores-core-1.9.0.jar" sourcepath="/cores-core"/>
 	<classpathentry kind="lib" path="lib/dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/guava-11.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-auth-2.7.2.jar"/>
@@ -38,5 +36,7 @@
 	<classpathentry kind="lib" path="lib/parquet-common-1.6.0rc3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/parquet-hadoop-1.6.0rc3-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/parquet-hadoop-bundle-1.6.0rc3-SNAPSHOT.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cores-avro"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/cores-core"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
